Don't un-flip if we're only mapping for one object.

BUG=644122

Review-Url: https://codereview.chromium.org/2318033003
Cr-Commit-Position: refs/heads/master@{#417141}

Former-commit-id: 397fa7cad90b8ca7537de21e18949fada5d83c32